theme update done

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -2,12 +2,12 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0"  style="text-transform: capitalize;">Register On Electric Hamam</h1>
+        <h1 class="m-0"  style="text-transform: capitalize;color:white;">Register On Electric Hamam</h1>
       </div><!-- /.col -->
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
-          <li class="breadcrumb-item active">Sign Up</li>
+          <li class="breadcrumb-item"><a routerLink="/" style="color:white;">Home</a></li>
+          <li class="breadcrumb-item active" style="color:white;">Sign Up</li>
         </ol>
       </div><!-- /.col -->
     </div><!-- /.row -->
@@ -17,7 +17,7 @@
 
 <!-- Main content -->
 <div class="content">
-  <div class="container-fluid">
+  <div class="container-fluid" style="padding:20px;">
 <div class="register-container">
     <div class="form-container">
       <h2>Sign Up To Electric Hamam</h2>
