--- a/src/app/sellers/sellers/sellers.component.html
+++ b/src/app/sellers/sellers/sellers.component.html
@@ -3,11 +3,11 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1 class="m-0" routerLink="/sellers">Brands</h1>
+          <h1 class="m-0" routerLink="/sellers" style="color:white">Brands</h1>
         </div><!-- /.col -->
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
-            <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+            <li class="breadcrumb-item"><a routerLink="/" style="color:white">Home</a></li>
             <li class="breadcrumb-item active">All Brands</li>
           </ol>
         </div><!-- /.col -->
@@ -18,7 +18,7 @@
 
 <!-- Main content -->
 <div class="content">
-  <div class="container-fluid">
+  <div class="container-fluid" style="padding:20px;">
 
 
    
