--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="wrapper">
+<div class="wrapper gradient-custom">
 <app-header></app-header>
-<div class="content-wrapper">
+<div class="content-wrapper h-100 " style="background:inherit;">
 <router-outlet></router-outlet>
 </div>
-<app-footer></app-footer>
+<app-footer ></app-footer>
 </div>
