--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -2,11 +2,11 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0"  style="text-transform: capitalize;">Shopping Cart</h1>
+        <h1 class="m-0"  style="text-transform: capitalize;color:#fff;">Shopping Cart</h1>
       </div><!-- /.col -->
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+          <li class="breadcrumb-item"><a routerLink="/" style="color:#fff;">Home</a></li>
           <li class="breadcrumb-item active">Shopping Cart</li>
         </ol>
       </div><!-- /.col -->
@@ -19,69 +19,143 @@
 <div class="content">
   <div class="container-fluid">
 
+            <!--new cart design starts here-->
 
-<div class="cart-container card">
-    <div class="cart-container__empty card-body" *ngIf="cartData.products.length === 0">
-      Your cart is empty.
-    </div>
-    <div class="cart-container__list " *ngIf="cartData.products.length > 0">
-      <header class="list-header">
-        <h2>Cart</h2>
-      </header>
-      <div
-        class="list-item"
-        *ngFor="let product of cartData.products; index as i"
-        [ngStyle]="{ border: i === cartData.products.length - 1 && 'none' }"
-      >
-        <div class="list-item__remove" (click)="removeCartItem(product.id)">
-          X
-        </div>
-        <div class="list-item__image">
-          <img [src]="product.image" alt="" />
-        </div>
-        <div class="list-item__details">
-          <div class="title">{{ product.title }}</div>
-          <div class="price">{{ product.price | currency: "INR" }}</div>
-          <div class="cta form-group row">
-            <!-- <nz-input-number
+            <section >
+              <div class="container py-5">
+                <div class="row d-flex justify-content-center my-4">
+                  <div class="col-md-8">
+                    <div class="card mb-4">
+                      <div class="card-header py-3">
+                        <h5 class="mb-0" style="color:black;">Cart - {{ cartData.products.length }} items</h5>
+                      </div>
+
+                      <!--if cart is empty starts here-->
+                      <div class="card-body" *ngIf="cartData.products.length === 0">
+                       <p style="color:black;"> Your cart is empty.</p>
+                      </div>
+                      <!--if cart is empty ends here-->
+
+                      <div class="card-body" *ngIf="cartData.products.length > 0">
+
+
+                           
+                        <!-- Single item -->
+                        <div class="row" *ngFor="let product of cartData.products; index as i" style="padding:5px;margin-bottom:5px;margin-top:5px;border-bottom:1px solid #eee;">
+
+                          <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
+                            <!-- Image -->
+                            <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
+                              <img [src]="product.image" class="w-100" alt="Cart Product {{ i }}" />
+                              <a routerLink="/cart">
+                                <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
+                              </a>
+                            </div>
+                            <!-- Image -->
+                          </div>
+            
+                          <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
+                            <!-- Data -->
+                            <p><strong>{{ product.title }}</strong></p>
+                            <p>{{ product.price | currency: "INR" }} / <span class="text-info">ft<sup>2</sup></span>  </p>
+                           
+                            <p>
+                            <nz-input-number
               [(ngModel)]="product.quantity"
               [nzMin]="product.maxQuantity > 0 ? 1 : 0"
               [nzMax]="product.maxQuantity > 0 ? product.maxQuantity : 0"
               [nzStep]="1"
               (ngModelChange)="updateCart(product.id, product.quantity)"
-            ></nz-input-number> -->
+            ></nz-input-number>
+                           <span class="text-info">ft<sup>2</sup> required</span>
+                          </p>
+                            <p>
+                            <button type="button" class="btn btn-danger btn-sm me-1 mb-2" data-mdb-toggle="tooltip"
+                              title="Remove item" (click)="removeCartItem(product.id)">
+                              <i class="fas fa-trash"></i>  <span> Remove From Cart</span>
+                            </button>
+                            </p>
+
+                          
+                            <!-- Data -->
+                          </div>
             
-            <input type="number" class="form-control col-10"  [(ngModel)]="product.quantity"  (ngModelChange)="updateCart(product.id, product.quantity)" >
-            <span class="text-info col-2"> ft<sup>2</sup></span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="cart-container__total">
-      <div class="price">
-        <span>
-          <h3>Total amount</h3>
-          <h2>{{ cartData.total | currency: "INR" }}</h2></span
-        >
-        <span>
-          <h3>Total items</h3>
-          <h2>{{ cartData.products.length }}</h2>
-        </span>
-      </div>
-      <div class="cta">
-        <button
-          nz-button
-          nzType="primary"
-          routerLink="/checkout"
-          [disabled]="cartData.products.length === 0"
-        >
-          Checkout
-        </button>
-        <button nz-button routerLink="/">Back to shopping</button>
-      </div>
-    </div>
-  </div>
-  
+                          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+                          
+                            <!-- Price -->
+                            <p class="text-start text-md-center">
+                              <strong>{{ product.price * product.quantity | currency: "INR" }}</strong>
+                            </p>
+                            <!-- Price -->
+                          </div>
+                          
+                        </div>
+                        <!-- Single item -->
+
+
+                                   
+                       
+            
+                      </div>
+                    </div>
+                    <div class="card mb-4">
+                      <div class="card-body">
+                        <p><strong>Payment Method</strong></p>
+                        <p class="mb-0">Cash On <span class="text-primary">Delivery / Installation</span></p>
+                      </div>
+                    </div>
+                 
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card mb-4">
+                      <div class="card-header py-3">
+                        <h5 class="mb-0" style="color:black;">Summary</h5>
+                      </div>
+                      <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                          <li
+                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                            Total Products
+                            <span>{{ cartData.products.length }}</span>
+                          </li>
+                          <!-- <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                            Total Amount
+                            <span>{{ cartData.total | currency: "INR" }}</span>
+                          </li> -->
+                          <li
+                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+                            <div>
+                              <strong>Total amount</strong>
+                              <strong>
+                                <p class="mb-0">(excluding GST)</p>
+                              </strong>
+                            </div>
+                            <span><strong>{{ cartData.total | currency: "INR" }}</strong></span>
+                          </li>
+                        </ul>
+            
+                        <div class="cta">
+                        <button
+                        nz-button
+                        nzType="primary"
+                        routerLink="/checkout"
+                        [disabled]="cartData.products.length === 0"
+                      >
+                        Go To Checkout
+                      </button>
+                      <button nz-button routerLink="/">Back to shopping</button>
+                        </div>
+
+
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <!--new cart design ends here-->
+
+
 
   </div>
 </div>
