--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
- <footer class="main-footer">
+ <footer class="main-footer gradient-custom" style="border-color:transparent;color:#fff;">
     <!-- To the right -->
-    <div class="float-right d-none d-sm-inline">
+    <div class="float-right d-none d-sm-inline" style="color:#fff;">
       Under Development
     </div>
     <!-- Default to the left -->
-    <strong>Copyright &copy; 2022 <a routerLink="/">Electric Hamam</a>.</strong> All rights reserved.
+    <strong >Copyright &copy; 2022 <a routerLink="/" style="color:#fff;">Electric Hamam</a> . </strong>  <span style="color:#fff;"> All rights reserved. </span>
   </footer>
