--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
-<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+<nav class="main-header navbar navbar-expand navbar-white navbar-light gradient-custom" style="border-color:transparent;">
   <!-- Left navbar links -->
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a routerLink="/" class="nav-link">Electric Hamam</a>
+      <a routerLink="/" class="nav-link" style="color:white;">Electric Hamam</a>
     </li>
   </ul>
 
@@ -15,7 +15,7 @@
     <!-- Notifications Dropdown Menu -->
     <li class="nav-item dropdown">
       <a class="nav-link" data-toggle="dropdown" href="#">
-        <i class="far fa-bell"></i>
+        <i class="far fa-bell" style="color:white;"></i>
         <span class="badge badge-warning navbar-badge">0</span>
       </a>
       <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
@@ -31,13 +31,13 @@
       </div>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-        <i class="fas fa-expand-arrows-alt"></i>
+      <a class="nav-link" data-widget="fullscreen"  role="button">
+        <i class="fas fa-expand-arrows-alt" style="color:white;"></i>
       </a>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link" data-toggle="dropdown" >
-        <i class="fa fa-shopping-cart"  [ngStyle]="{ fontSize: '24px' }"></i>
+        <i class="fa fa-shopping-cart" style="color:white;" ></i>
         <span class="badge badge-info navbar-badge">{{ cartData.products.length }}</span>
       </a>
       <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
@@ -133,11 +133,11 @@
 </nav>
 
   <!-- Main Sidebar Container -->
-  <aside class="main-sidebar sidebar-dark-primary elevation-4">
+  <aside class="main-sidebar sidebar-dark-primary elevation-4 " style="background:#6a11cb;">
     <!-- Brand Logo -->
     <a  routerLink="/" class="brand-link">
       <img src="../../assets/img/Logo.png" alt="electrichamam.com Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Electric Hamam</span>
+      <span class="brand-text font-weight-light" style="color:white;">Electric Hamam</span>
     </a>
 
     <!-- Sidebar -->
@@ -164,64 +164,64 @@
           
           <li class="nav-item"  routerLink="/">
             <a class="nav-link">
-              <i class="nav-icon fa fa-home"></i>
-              <p>
+              <i class="nav-icon fa fa-home" style="color:white;"></i>
+              <p style="color:white;">
                 Hamam Home
               </p>
             </a>
           </li>
           <li class="nav-item" routerLink="/cart" >
             <a class="nav-link">
-              <i class="nav-icon fa fa-shopping-cart"></i>
-              <p>
+              <i class="nav-icon fa fa-shopping-cart" style="color:white;"></i>
+              <p style="color:white;">
                 Cart
               </p>
             </a>
           </li>
           <li class="nav-item"  routerLink="/sellers" >
             <a class="nav-link">
-              <i class="nav-icon fa fa-list"></i>
-              <p>
+              <i class="nav-icon fa fa-list" style="color:white;"></i>
+              <p style="color:white;">
                 All Brands
               </p>
             </a>
           </li>
           <li class="nav-item"  routerLink="/profile" >
             <a class="nav-link">
-              <i class="nav-icon fa fa-user"></i>
-              <p>
+              <i class="nav-icon fa fa-user" style="color:white;"></i>
+              <p style="color:white;">
                 Profile
               </p>
             </a>
           </li>
           <li class="nav-item"  routerLink="/order-history" >
             <a class="nav-link">
-              <i class="nav-icon fa fa-history"></i>
-              <p>
+              <i class="nav-icon fa fa-history" style="color:white;"></i>
+              <p style="color:white;">
                 Order History
               </p>
             </a>
           </li>
           <li class="nav-item"  routerLink="/login" *ngIf="!isLoggedIn">
             <a class="nav-link">
-              <i class="nav-icon fa fa-sign-in"></i>
-              <p>
+              <i class="nav-icon fa fa-sign-in" style="color:white;"></i>
+              <p style="color:white;">
                 Sign In
               </p>
             </a>
           </li>
           <li class="nav-item"  routerLink="/register" *ngIf="!isLoggedIn">
             <a class="nav-link">
-              <i class="nav-icon fa fa-user-plus"></i>
-              <p>
+              <i class="nav-icon fa fa-user-plus" style="color:white;"></i>
+              <p style="color:white;">
                 Sign Up
               </p>
             </a>
           </li>
           <li class="nav-item" (click)="logout()" *ngIf="isLoggedIn">
             <a class="nav-link">
-              <i class="nav-icon fa fa-sign-out"></i>
-              <p>
+              <i class="nav-icon fa fa-sign-out" style="color:white;"></i>
+              <p style="color:white;">
                 Sign Out
               </p>
             </a>
