--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,58 @@
+.card-trans{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(255,255, 255, 0.5);
+    border-left: 1px solid rgba(255,255, 255, 0.5);
+  
+    border-radius:15px;
+    backdrop-filter:blur(5px) ;
+    background:rgba(255,255, 255, 0.1);
+    overflow: hidden;
+    box-shadow:20px 20px 50px rgba(0, 0, 0, 0.5);
+    
+  }
+  .content-trans{
+    text-align: center;
+    padding:20px;
+    color: white;
+    transition: 0.5s;
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  .h1-trans{
+    position: absolute;
+    top: -80px;
+    left:30%;
+    font-size: 8em;
+    color:rgba(255, 255, 255, 0.05);
+    pointer-events: none;
+  }
+  .h2-trans{
+    font-size: 1.8em;
+    color: #fff;
+    z-index:1;
+  }
+  .p-trans{
+    font-size: 1em;
+    color:#fff;
+    font-weight: 300px;
+  }
+  .a-trans{
+    position: relative;
+    background-color: #fff;
+    color: black;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 15px;
+    margin-top: 15px;
+    font-weight: 500;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  }
+
+
 
 .brand-card {
     height: 250px;
