--- a/src/app/order-history/order-history.component.html
+++ b/src/app/order-history/order-history.component.html
@@ -1,1 +1,82 @@
-<p>order-history works!</p>
+<div class="content-header">
+    <div class="container-fluid">
+      <div class="row mb-2">
+        <div class="col-sm-6">
+          <h1 class="m-0"  style="text-transform: capitalize;color:white;">Order History</h1>
+        </div><!-- /.col -->
+        <div class="col-sm-6">
+          <ol class="breadcrumb float-sm-right">
+            <li class="breadcrumb-item"><a routerLink="/" style="color:white">Home</a></li>      
+            <li class="breadcrumb-item active" style="color:white">Order History</li>
+          </ol>
+        </div><!-- /.col -->
+      </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+  </div>
+  <!-- /.content-header -->
+  
+  <!-- Main content -->
+  <div class="content">
+  <div class="container-fluid" style="padding:20px;">
+
+
+<div class="order-history-container">
+    {{ error }}
+
+    <h5 class="card-title" style="color:white;">Orders Found <span class="badge badge-info">{{ distinctorders['orders'].length }}</span></h5>
+
+    <div class="row">
+        
+        <div class="col-lg-4 col-md-6 col-sm-12 card mx-2 my-1" *ngFor="let order of distinctorders['orders'];let i = index;">
+            <div class="card-header">
+                    <p class="card-title">Order   <span class="badge badge-success">{{ i+1 }}</span> Summary</p>
+            </div>
+            <div class="card-body row">
+                <dt class="col-4">Order Date</dt><dd class="col-8">{{ order.placed_on | date:'full' }}</dd>
+                <dt class="col-4">Order Amount</dt><dd class="col-8">{{ order.total_amount | currency: "INR" }}</dd>
+
+
+                <div class="callout callout-info">
+                    <h5>Shipping / Billing Address</h5>
+  
+                    <p></p>
+                  </div>
+                
+                  
+                    {{ order | json }}
+
+            </div>
+
+    </div>   
+
+      {{ orders | json }}
+
+    </div>
+
+      
+
+
+    <nz-table #basicTable [nzData]="orders" *ngIf="orders.length > 0">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Quantity</th>
+          <th>OrderID</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of basicTable.data">
+          <td>{{ item.title }}</td>
+          <td>{{ item.quantity }}</td>
+          <td>{{ item.order_id }}</td>
+        </tr>
+      </tbody>
+    </nz-table>
+
+
+  </div>
+  
+
+</div>
+
+</div>
