--- a/src/app/order-history/order-history.component.html
+++ b/src/app/order-history/order-history.component.html
@@ -20,61 +20,34 @@
   <div class="container-fluid" style="padding:20px;">
 
 
-<div class="order-history-container">
-    {{ error }}
+<div class="order-history-container ">
+    <h5 class="" style="color:white;" >{{ error }}</h5>
 
-    <h5 class="card-title" style="color:white;">Orders Found <span class="badge badge-info">{{ distinctorders['orders'].length }}</span></h5>
+    <h5 class="" style="color:white;" *ngIf="distinctorders['orders']">Orders Found <span class="badge badge-info">{{ distinctorders['orders'].length }}</span></h5>
 
-    <div class="row">
+    <div class="row"><!--container row 1 starts here-->
         
         <div class="col-lg-4 col-md-6 col-sm-12 card mx-2 my-1" *ngFor="let order of distinctorders['orders'];let i = index;">
-            <div class="card-header">
-                    <p class="card-title">Order   <span class="badge badge-success">{{ i+1 }}</span> Summary</p>
-            </div>
-            <div class="card-body row">
-                <dt class="col-4">Order Date</dt><dd class="col-8">{{ order.placed_on | date:'full' }}</dd>
-                <dt class="col-4">Order Amount</dt><dd class="col-8">{{ order.total_amount | currency: "INR" }}</dd>
 
 
-                <div class="callout callout-info">
-                    <h5>Shipping / Billing Address</h5>
-  
-                    <p></p>
-                  </div>
-                
-                  
-                    {{ order | json }}
-
-            </div>
-
-    </div>   
-
-      {{ orders | json }}
-
-    </div>
-
-      
+          <app-order-history-item 
+          [orderId]="order.id"
+          [orderlistindex]="i+1"
+          [user_id]="order.user_id"
+          [user_address_id]="order.user_address_id"
+          [total_amount]="order.total_amount"
+          [placed_on]="order.placed_on"
+          [status]="order.status"
+          ></app-order-history-item>
 
 
-    <nz-table #basicTable [nzData]="orders" *ngIf="orders.length > 0">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Quantity</th>
-          <th>OrderID</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of basicTable.data">
-          <td>{{ item.title }}</td>
-          <td>{{ item.quantity }}</td>
-          <td>{{ item.order_id }}</td>
-        </tr>
-      </tbody>
-    </nz-table>
+            
+            
+    </div>   <!--ngfor loop for orders ends here-->
 
+    </div><!--container row 1 ends here-->
 
-  </div>
+  </div><!--order container ends here-->
   
 
 </div>
