--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -23,20 +23,21 @@
 
             <section >
               <div class="container py-5">
+                cart data =  {{ cartData | json }}
                 <div class="row d-flex justify-content-center my-4">
                   <div class="col-md-8">
                     <div class="card mb-4">
                       <div class="card-header py-3">
-                        <h5 class="mb-0" style="color:black;">Cart - {{ cartData.products.length }} items</h5>
+                        <h5 class="mb-0" style="color:black;">Cart - {{ cartData.products?.length || 0 }} items</h5>
                       </div>
-
-                      <!--if cart is empty starts here-->
-                      <div class="card-body" *ngIf="cartData.products.length === 0">
+                         
+                      <!--if cart is empty starts here--> 
+                      <div class="card-body" *ngIf="cartData.products?.length === 0">
                        <p style="color:black;"> Your cart is empty.</p>
                       </div>
                       <!--if cart is empty ends here-->
 
-                      <div class="card-body" *ngIf="cartData.products.length > 0">
+                      <div class="card-body" *ngIf="cartData.products?.length > 0">
 
 
                            
@@ -116,7 +117,7 @@
                           <li
                             class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                             Total Products
-                            <span>{{ cartData.products.length }}</span>
+                            <span>{{ cartData.products?.length || 0 }}</span>
                           </li>
                           <!-- <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                             Total Amount
@@ -130,7 +131,7 @@
                                 <p class="mb-0">(excluding GST)</p>
                               </strong>
                             </div>
-                            <span><strong>{{ cartData.total | currency: "INR" }}</strong></span>
+                            <span><strong>{{ cartData.total || 0 | currency: "INR" }}</strong></span>
                           </li>
                         </ul>
             
@@ -139,7 +140,7 @@
                         nz-button
                         nzType="primary"
                         routerLink="/checkout"
-                        [disabled]="cartData.products.length === 0"
+                        [disabled]="cartData.products?.length === 0"
                       >
                         Go To Checkout
                       </button>
